# logseq-cli

./: .env.example  .env.pypi.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SKILL.md  UNSUPPORTED-LOGSEQ-HTTP-METHODS.md  pyproject.toml
scripts/: publish-pypi.ps1
src/: __init__.py  config.py  logseq_client.py  logseq_service.py
src/cli/: auth.py  block.py  graph.py  main.py  output.py  page.py  query.py  skill.py  stdin.py
tests/: conftest.py  test_auth.py  test_block.py  test_entrypoint.py  test_errors.py  test_graph.py  test_output.py  test_page.py  test_query.py  test_skill.py  test_stdin.py
